# contractguard-ph

./: .env.example  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  pyproject.toml  render.yaml
app/: config.py  ingest.py  main.py  pipeline.py  retriever.py  retry.py  segmentation.py  verdict.py
eval/: run_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx  main.tsx
frontend/src/components/: bokeh.tsx  confirm-dialog.tsx  logo.tsx  scanning-loader.tsx  sidebar.tsx
frontend/src/context/: theme-provider.tsx
frontend/src/lib/: api.ts  auth.tsx  history.ts  labels.ts  supabase.ts
frontend/src/screens/: report.tsx  signin.tsx  upload.tsx
frontend/src/styles/: index.css  theme.css
kb/: supabase_schema.sql
kb/rules/: rules.json
kb/scripts/: embed_and_load.py  fetch_sources.py  parse_rules.py  setup_indexes.py
tests/: test_api.py  test_pipeline.py
