[project]
name = "contractguard-ph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "openai>=2.44.0",
    "pymongo>=4.17.0",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
